--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
   },
   "homepage": "https://github.com/lord22shark/utils#readme",
   "dependencies": {
+    "@google-cloud/bigquery": "^6.0.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "moment-timezone": "^0.5.34",
+    "mongoose": "^6.6.5",
+    "parse-url": "^8.1.0",
+    "redis": "^4.3.1",
     "remove-accents": "^0.4.2",
     "uuid": "^8.3.2"
   },
