--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "utils",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "A package assembling all fragments of Javascript code that I wrote that are usefull alongside many projects like Errors, Tokens, Prototypes and so on",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "^6.0.3",
     "axios": "^1.1.2",
+    "dotenv": "^16.0.3",
     "fast-jwt": "^2.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
