--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "qs": "^6.11.0",
     "redis": "^4.3.1",
     "remove-accents": "^0.4.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "jest": "^28.1.1"
