--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "utils",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "description": "A package assembling all fragments of Javascript code that I wrote that are usefull alongside many projects like Errors, Tokens, Prototypes and so on",
   "main": "index.js",
   "scripts": {
@@ -23,25 +23,29 @@
     "url": "https://github.com/lord22shark/utils/issues"
   },
   "homepage": "https://github.com/lord22shark/utils#readme",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "dependencies": {
-    "@google-cloud/bigquery": "^6.0.3",
-    "axios": "^1.1.2",
-    "dotenv": "^16.0.3",
-    "fast-jwt": "^2.0.0",
+    "@google-cloud/bigquery": "^8.0.0",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
+    "fast-jwt": "^6.0.1",
     "lodash": "^4.17.21",
-    "moment": "^2.29.3",
-    "moment-timezone": "^0.5.34",
-    "mongoose": "^6.6.5",
-    "parse-url": "^8.1.0",
-    "pg": "^8.8.0",
-    "qs": "^6.11.0",
-    "redis": "^4.3.1",
-    "remove-accents": "^0.4.2",
-    "uuid": "^8.3.2",
-    "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
+    "mongoose": "^8.14.1",
+    "mysql2": "^3.14.1",
+    "parse-url": "^10.0.0",
+    "pg": "^8.15.6",
+    "qs": "^6.14.0",
+    "redis": "^5.0.0",
+    "remove-accents": "^0.5.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "jest": "^28.1.1"
+    "jest": "^29.7.0"
   }
 }
